<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ColorZone</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="start_new">New</string>
	<string name="brush">Brush</string>
	<string name="pattern">Paint</string>
	<string name="opacity">Paint</string>
	<string name="erase">Erase</string>
	<string name="save">Save</string>
	<string name="paint">Paint</string>
	<string name="sml">Small</string>
<string name="med">Medium</string>
<string name="lrg">Large</string>
	


<string name="back">Back</string>
<string name="exit">exit</string>

<string name="Credits">Credits</string>
<string name="ColorZone">ColorZone</string>



</resources>
