<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFCCCCCC"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >
    
    
    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="50dp"
    android:layout_gravity="center"
    android:orientation="horizontal" 
    >
    
        
        <ImageButton
    android:id="@+id/new_btn"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:contentDescription="@string/start_new"
    android:src="@drawable/new_pic" />
        
        
        <ImageButton
    android:id="@+id/draw_btn"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:contentDescription="@string/brush"
    android:src="@drawable/brush" 
   	/>
        
        
       
        
        
        <ImageButton
    android:id="@+id/erase_btn"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:contentDescription="@string/erase"
    android:src="@drawable/eraser" />
        
        <ImageButton 
            android:id="@+id/opacity_btn" 
            android:layout_width="wrap_content" 
            android:layout_height="fill_parent"
            android:contentDescription="@string/opacity" 
            android:src="@drawable/opacity" />
        
        
        <ImageButton
    android:id="@+id/save_btn"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:contentDescription="@string/save"
    android:src="@drawable/save" />
        
         
        
        
</LinearLayout>

    
    <com.example.colorzone.DrawingView
    android:id="@+id/drawing"
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_marginBottom="2dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="3dp"
    android:layout_weight="1"
    android:background="#FFFFFFFF" />
    
    
    
    
    
    <HorizontalScrollView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    
    android:fillViewport="true"
    android:measureAllChildren="false"
    android:scrollbars="none">
        
        
    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
   
    android:orientation="vertical" >
        
        
        <!-- Top Row -->
        
        
<LinearLayout
    android:id="@+id/paint_colors"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="30dp"
    android:orientation="horizontal" >
    
    
    <ImageButton
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_margin="2dp"
    android:layout_marginLeft="32dp"
    android:background="#FF000000"
    android:contentDescription="@string/paint"
    android:onClick="paintClicked"
    android:src="@drawable/paint"
    android:tag="#FF000000" />
<ImageButton
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_margin="2dp"
    android:background="#FFFF0000"
    android:contentDescription="@string/paint"
    android:onClick="paintClicked"
    android:src="@drawable/paint"
    android:tag="#FFFF0000" />
<ImageButton
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_margin="2dp"
    android:background="#FFFF6600"
    android:contentDescription="@string/paint"
    android:onClick="paintClicked"
    android:src="@drawable/paint"
    android:tag="#FFFF6600" />
<ImageButton
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_margin="2dp"
    android:background="#FFFFCC00"
    android:contentDescription="@string/paint"
    android:onClick="paintClicked"
    android:src="@drawable/paint"
    android:tag="#FFFFCC00" />
<ImageButton
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_margin="2dp"
    android:background="#FF009900"
    android:contentDescription="@string/paint"
    android:onClick="paintClicked"
    android:src="@drawable/paint"
    android:tag="#FF009900" />
<ImageButton
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_margin="2dp"
    android:background="#FF009999"
    android:contentDescription="@string/paint"
    android:onClick="paintClicked"
    android:src="@drawable/paint"
    android:tag="#FF009999" />

<ImageButton
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_margin="2dp"
    android:background="#bbef67"
    android:contentDescription="@string/paint"
    android:onClick="paintClicked"
    android:src="@drawable/paint"
    android:tag="#bbef67" />

<ImageButton
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_margin="2dp"
    android:background="#fae0f8"
    android:contentDescription="@string/paint"
    android:onClick="paintClicked"
    android:src="@drawable/paint"
    android:tag="#fae0f8" />

<ImageButton
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_margin="2dp"
    android:background="#223a34"
    android:contentDescription="@string/paint"
    android:onClick="paintClicked"
    android:src="@drawable/paint"
    android:tag="#223a34" />

<ImageButton
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_margin="2dp"
    android:background="#ada7ae"
    android:contentDescription="@string/paint"
    android:onClick="paintClicked"
    android:src="@drawable/paint"
    android:tag="#ada7ae" />

<ImageButton
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_margin="2dp"
    android:background="#383c7a"
    android:contentDescription="@string/paint"
    android:onClick="paintClicked"
    android:src="@drawable/paint"
    android:tag="#383c7a" />



<ImageButton
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_margin="2dp"
    android:background="#8facb7"
    android:contentDescription="@string/paint"
    android:onClick="paintClicked"
    android:src="@drawable/paint"
    android:tag="#8facb7" />
<ImageButton
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_margin="2dp"
    android:background="#e66f60"
    android:contentDescription="@string/paint"
    android:onClick="paintClicked"
    android:src="@drawable/paint"
    android:tag="#e66f60" />
<ImageButton
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_margin="2dp"
    android:background="#fffa85"
    android:contentDescription="@string/paint"
    android:onClick="paintClicked"
    android:src="@drawable/paint"
    android:tag="#fffa85" />
<ImageButton
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_margin="2dp"
    android:background="#79ad5c"
    android:contentDescription="@string/paint"
    android:onClick="paintClicked"
    android:src="@drawable/paint"
    android:tag="#79ad5c" />
<ImageButton
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_margin="2dp"
    android:background="#5cada5"
    android:contentDescription="@string/paint"
    android:onClick="paintClicked"
    android:src="@drawable/paint"
    android:tag="#5cada5" />
<ImageButton
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_margin="2dp"
    android:background="#254a5f"
    android:contentDescription="@string/paint"
    android:onClick="paintClicked"
    android:src="@drawable/paint"
    android:tag="#254a5f" />
<ImageButton
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_margin="2dp"
    android:background="#3c255f"
    android:contentDescription="@string/paint"
    android:onClick="paintClicked"
    android:src="@drawable/paint"
    android:tag="#3c255f" />
<ImageButton
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_margin="2dp"
    android:background="#8a8a8a"
    android:contentDescription="@string/paint"
    android:onClick="paintClicked"
    android:src="@drawable/paint"
    android:tag="#8a8a8a" />
<ImageButton
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_margin="2dp"
    android:background="#ebac7a"
    android:contentDescription="@string/paint"
    android:onClick="paintClicked"
    android:src="@drawable/paint"
    android:tag="#ebac7a" />
<ImageButton
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_margin="2dp"
    android:background="#169c41"
    android:contentDescription="@string/paint"
    android:onClick="paintClicked"
    android:src="@drawable/paint"
    android:tag="#169c41" />

    
    
</LinearLayout>



<!-- Bottom Row -->
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    android:layout_marginTop="-30dp"
    android:orientation="horizontal" >

<ImageButton
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_margin="2dp"
    android:background="#FF0000FF"
    android:contentDescription="@string/paint"
    android:onClick="paintClicked"
    android:src="@drawable/paint"
    android:tag="#FF0000FF" />
<ImageButton
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_margin="2dp"
    android:background="#FF990099"
    android:contentDescription="@string/paint"
    android:onClick="paintClicked"
    android:src="@drawable/paint"
    android:tag="#FF990099" />
<ImageButton
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_margin="2dp"
    android:background="#FFFF6666"
    android:contentDescription="@string/paint"
    android:onClick="paintClicked"
    android:src="@drawable/paint"
    android:tag="#FFFF6666" />
<ImageButton
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_margin="2dp"
    android:background="#FFFFFFFF"
    android:contentDescription="@string/paint"
    android:onClick="paintClicked"
    android:src="@drawable/paint"
    android:tag="#FFFFFFFF" />
<ImageButton
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_margin="2dp"
    android:background="#FF787878"
    android:contentDescription="@string/paint"
    android:onClick="paintClicked"
    android:src="@drawable/paint"
    android:tag="#FF787878" />
<ImageButton
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_margin="2dp"
    android:background="#48819d"
    android:contentDescription="@string/paint"
    android:onClick="paintClicked"
    android:src="@drawable/paint"
    android:tag="#48819d" />

<ImageButton
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_margin="2dp"
    android:background="#552b3c"
    android:contentDescription="@string/paint"
    android:onClick="paintClicked"
    android:src="@drawable/paint"
    android:tag="#552b3c" />

<ImageButton
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_margin="2dp"
    android:background="#71a02c"
    android:contentDescription="@string/paint"
    android:onClick="paintClicked"
    android:src="@drawable/paint"
    android:tag="#71a02c" />

<ImageButton
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_margin="2dp"
    android:background="#491f0d"
    android:contentDescription="@string/paint"
    android:onClick="paintClicked"
    android:src="@drawable/paint"
    android:tag="#491f0d" />

<ImageButton
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_margin="2dp"
    android:background="#c2c577"
    android:contentDescription="@string/paint"
    android:onClick="paintClicked"
    android:src="@drawable/paint"
    android:tag="#c2c577" />

<ImageButton
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_margin="2dp"
    android:background="#2f8093"
    android:contentDescription="@string/paint"
    android:onClick="paintClicked"
    android:src="@drawable/paint"
    android:tag="#2f8093" />


<ImageButton
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_margin="2dp"
    android:background="#dbac43"
    android:contentDescription="@string/paint"
    android:onClick="paintClicked"
    android:src="@drawable/paint"
    android:tag="#dbac43" />
<ImageButton
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_margin="2dp"
    android:background="#2a7dcf"
    android:contentDescription="@string/paint"
    android:onClick="paintClicked"
    android:src="@drawable/paint"
    android:tag="#2a7dcf" />
<ImageButton
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_margin="2dp"
    android:background="#54c4c1"
    android:contentDescription="@string/paint"
    android:onClick="paintClicked"
    android:src="@drawable/paint"
    android:tag="#54c4c1" />
<ImageButton
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_margin="2dp"
    android:background="#c454a4"
    android:contentDescription="@string/paint"
    android:onClick="paintClicked"
    android:src="@drawable/paint"
    android:tag="#c454a4" />
<ImageButton
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_margin="2dp"
    android:background="#7ec34b"
    android:contentDescription="@string/paint"
    android:onClick="paintClicked"
    android:src="@drawable/paint"
    android:tag="#7ec34b" />
<ImageButton
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_margin="2dp"
    android:background="#494d19"
    android:contentDescription="@string/paint"
    android:onClick="paintClicked"
    android:src="@drawable/paint"
    android:tag="#494d19" />
<ImageButton
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_margin="2dp"
    android:background="#2e194d"
    android:contentDescription="@string/paint"
    android:onClick="paintClicked"
    android:src="@drawable/paint"
    android:tag="#2e194d" />
<ImageButton
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_margin="2dp"
    android:background="#c2b9fe"
    android:contentDescription="@string/paint"
    android:onClick="paintClicked"
    android:src="@drawable/paint"
    android:tag="#c2b9fe" />
<ImageButton
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_margin="2dp"
    android:background="#b9f0fe"
    android:contentDescription="@string/paint"
    android:onClick="paintClicked"
    android:src="@drawable/paint"
    android:tag="#b9f0fe" />
<ImageButton
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_margin="2dp"
    android:background="#b7ab8f"
    android:contentDescription="@string/paint"
    android:onClick="paintClicked"
    android:src="@drawable/paint"
    android:tag="#b7ab8f" />

    
   
</LinearLayout>
        
        
</LinearLayout>

    </HorizontalScrollView>
    
    
</LinearLayout>
